--- a/about.html
+++ b/about.html
@@ -5,4 +5,4 @@ description: This is what I do.
 background: '/img/bg-about.jpg'
 ---
 
-<p>I'm a Full Stack Web Developer with an extensive background in graphic design, web design, and photography. I started my journey of web design and front-end development in 2000 and continue to develop my skills in cutting-edge and emerging tech. I am constantly learning new technologies and am excited about the future of UX Design and UX Research, as well as my professional contributions to the field.</p>
+<p>I'm a Full Stack Web Developer with an extensive background in graphic design, web design, and photography. My clients have included Microsoft, POSSIBLE, and PennyPost. I started my journey of web design and front-end development in 2000 and created small web sites about my favorite musicians with HTML/CSS/JavaScript while dial-up was still around. I continue to learn and develop my skills in cutting-edge and emerging technologies. I am excited about the future of UX Design and UX Research, as well as my professional contributions to the field.</p>
